--- a/app_server/views/resourceInfo.pug
+++ b/app_server/views/resourceInfo.pug
@@ -3,44 +3,45 @@ extends layout
 include _includes/sharedHTMLfunctions
 
 block content
-  .resource-info-grid
-      .resource-info-box.resource-info-a
-          .resource-info-sub-box.resource-info-sub-a
-              h1.header_space_grid.text_black.resourceInfoPadding= sourceDetails.Title
-              a(href='/resource/', style='color: white')
-                  span.icon_font.spacing.hi-icon.hi-icon-arrow
-                      i.fa.fa-arrow-left.fa-2x
-              a(href='/resource/update/'+ sourceDetails.Id, style='color: white')
-                  span.icon_font.spacing.hi-icon.hi-icon-info
-                      i.fa.fa-pencil-square-o.fa-2x
-          .resource-info-sub-box.resource-info-sub-b
-              dl.uk-description-list-line.uk-contrast
-                  dt.header_text.title_orange Source 
-                  hr.hr_padding.hr_color
-                  |     
-                  dd.text_size.space.text_white #{sourceDetails.Source}
-                  
-                  dt.header_text.title_orange Categories
-                  hr.hr_padding.hr_color
-                  |     
-                  dd.text_size.space.text_white #{sourceDetails.Category}
+    a(href='/resource/', style='color:white')
+        span.hi-icon.hi-icon-arrow
+            i.fa.fa-arrow-left.fa-2x
+    a(href='/resource/update/'+ sourceDetails.Id, style='color: white')
+        span.icon_font.spacing.hi-icon.hi-icon-info
+            i.fa.fa-pencil-square-o.fa-2x
+    form.form-sign
+        if(error == 'val')
+            h1.title_orange.alert(role='alert') All Fields required, please try again.
 
-                  dt.header_text.title_orange Type of Source
-                  hr.hr_padding.hr_color
-                  |     
-                  dd.text_size.space.text_white #{sourceDetails.Type}
+        .text-center.mb-4
+            img.mb-4(src='https://getbootstrap.com/assets/brand/bootstrap-solid.svg', alt='', width='72', height='72')
+            h1.h3.mb-3.font-weight-normal Add Book
+        
+        .form
+            .form-group.row
+                label.col-2.col-form-label(for='title') Title
+                .col-10
+                    p #{sourceDetails.Title}
+            hr(size='10')
+            .form-group.row
+                label.col-2.col-form-label(for='category') Category
+                .col-10
+                     p #{sourceDetails.Category}
+            hr(size='10')
+            .form-group.row
+                label.col-2.col-form-label(for='example-email-input') Email
+                .col-10
+                    p #{sourceDetails.Type}
 
-          .resource-info-sub-box.resource-info-sub-c
-              .resource-info-sub-box.resource-info-sub-c-textbox.scroll
-                  dl.uk-description-list-line.uk-contrast
-                     dt.header_text.title_orange Description
-                     hr.hr_padding.hr_color
-                     |     
-                     dd.text_size.space.text_white #{sourceDetails.Description}
-     
-              .resource-info-sub-box.resource-info-sub-d-textbox 
-                  dl.uk-description-list-line.uk-contrast
-                     dt.header_text.title_orange Rating
-                     hr.hr_padding.hr_color
-                     dd.rating_space 
-                       +outputRating(sourceDetails.Rating)
+            hr(size='10')
+            .form-group.row
+                label.col-2.col-form-label(for='rating') Rating
+                .col-10
+                    +outputRating(sourceDetails.Rating)
+            
+            hr(size='10')      
+            .form-group.row
+                label.col-2.col-form-label(for='description') Description
+                .col-10
+                     p #{sourceDetails.Description}
+
