--- a/app_server/views/about.pug
+++ b/app_server/views/about.pug
@@ -1,12 +1,46 @@
 extends layout
 
 block content
-  .about-grid
-      .about-box.about-a 
-          .about-sub-box.about-sub-a
-               h1.about= about_body.header
-               hr.hr_color
-          .about-sub-box.about-sub-b
-               p #{about_body.body_section_A}
-               br
-               p #{about_body.body_section_B}
+    form.form-signin
+        .text-center.mb-4
+            img.mb-4(src='https://getbootstrap.com/assets/brand/bootstrap-solid.svg', alt='', width='72', height='72')
+            h1.h3.mb-3.font-weight-normal Floating labels
+            p
+            | Build form controls with floating labels via the 
+            code :placeholder-shown
+            |  pseudo-element. 
+            a(href='https://caniuse.com/#feat=css-placeholder-shown') Works in latest Chrome, Safari, and Firefox.
+       
+
+        .form(role='form')
+            .form-group.row
+                label.col-2.col-form-label(for='example-text-input') Text
+                .col-10
+                    input#example-text-input.form-control(type='text', value='Artisanal kale')
+            .form-group.row
+                label.col-2.col-form-label(for='example-search-input') Search
+                .col-10
+                    input#example-search-input.form-control(type='search', value='How do I shoot web')
+            .form-group.row
+                label.col-2.col-form-label(for='example-email-input') Email
+                .col-10
+                    input#example-email-input.form-control(type='email', value='bootstrap@example.com')
+            .form-group.row
+                label.col-2.col-form-label(for='example-url-input') URL
+                .col-10
+                    input#example-url-input.form-control(type='url', value='https://getbootstrap.com')
+            .form-group.row
+                label.col-2.col-form-label(for='example-tel-input') Telephone
+                .col-10
+                    input#example-tel-input.form-control(type='tel', value='1-(555)-555-5555')
+        
+
+    .about-grid
+        .about-box.about-a 
+            .about-sub-box.about-sub-a
+                h1.about= about_body.header
+                hr.hr_color
+            .about-sub-box.about-sub-b
+                p #{about_body.body_section_A}
+                br
+                p #{about_body.body_section_B}
