--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -4,45 +4,79 @@ html(ng-app='bookshelff')
     title= title
     
     link(rel='stylesheet', href='/stylesheets/hamburger.css')
-    link(rel='stylesheet', href='/stylesheets/uikit.min.css')
-    link(rel='stylesheet', href='/fonts/font-awesome.min.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    
+    //- link(rel='stylesheet', href='/stylesheets/boostrap.min.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css', integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm', crossorigin='anonymous')
 
     
+    link(rel='stylesheet', href='/fonts/font-awesome.min.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    
+   
+
     script(src='/javascripts/jquery.min.js')
+    script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js', integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN', crossorigin='anonymous')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js', integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl', crossorigin='anonymous')
+
     script(src='/javascripts/main.js')
     script(src='/angular/angular.js') 
     script(src='/angular/bookshelff.js')
     script(src='/javascripts/uikit.min.js')
-    
-  
+     script(src='/javascripts/boostrap.min.js')
 
+    
   body
-      
-      #js-nav-panel.nav-panel
-          ul#nav-display
-             li
-                 a.home-link(href='/') Home
-             |             
-             li
-                 a.work-link(href='/about') About
-             |             
-             li
-                 a.capabilities-link(href='/resource') Bookshelff
-                      
-            
-        
-      |
-      .wrapper
-            .nav-bar
-               a.hamburger.hamburger--spin.js-slide-panel.menu-open(onclick='toggle()', type='button')
-                  span.hamburger-box
-                      span.hamburger-inner
-               a.company-name(href='/')
-                  | BOOKSHELFF
-               
+    header
+      #navbarHeader.bg-dark.collapse(style='')
+        .container
+          .row
+            .col-sm-8.col-md-7.py-4
+              h4.text-white About
+              p.text-muted
+                | I wanted to make resource gathering easier by having a place where I could store relevant resource and find them easily. So I decided to create Bookshelff.
+            .col-sm-4.col-md-3.py-4
+              h4.text-white Contact
+              span.list-unstyled
+                
+                a.text-white.contact-font(href='#')
+                  span.spacing.hi-icon.fa-stack.fa-lg(style='font-size: .5rem;')
+                    i.fa.fa-linkedin.fa-stack-2x
+                   
+                a.text-white.contact-font(href='#')
+                  span.spacing.hi-icon.fa-stack.fa-lg(style='font-size: .5rem;')
+                    i.fa.fa-facebook.fa-stack-2x
+                   
+                 
+                 
+              
+
+      .navbar.navbar-dark.bg-dark.box-shadow
+        .container.d-flex.justify-content-between
+          a.navbar-brand.d-flex.align-items-center(href='/')
+            strong Home
+          button.navbar-toggler.collapsed(type='button', data-toggle='collapse', data-target='#navbarHeader', aria-controls='navbarHeader', aria-expanded='false', aria-label='Toggle navigation')
+            span.navbar-toggler-icon
+  block content
+  footer.footer
+    //- div
+    //-   p.float-right.pr-5
+    //-     a(href='#') Back to top
+    //-   p.pl-5
+    //-     | © 2017 Barnabas' Shelf, Inc. · 
+    //-     a(href='#') Privacy
+    //-     |  · 
+    //-     a(href='#') Terms 
+    //-     | ·  Icons made by 
+    //-     a(href='http://www.freepik.com', title='Freepik') Freepik
+    //-     |  from 
+    //-     a(href='https://www.flaticon.com/', title='Flaticon') www.flaticon.com
+    //-     |  is licensed by 
+    //-     a(href='http://creativecommons.org/licenses/by/3.0/', title='Creative Commons BY 3.0', target='_blank') CC 3.0 BY
+
+
+
 		
-            block content
+            
 
 
             
