--- a/app_server/views/x.pug
+++ b/app_server/views/x.pug
@@ -1,102 +1,47 @@
 extends layout
 
+include _includes/sharedHTMLfunctions
+
 block content
- .resource-list-grid
-     .resource-list-box.resource-list-a
-         .container-fluid
-             .row
-                 .col-lg-12.col-md-12.col-sm-12
-                     h2 Documents
-                     hr
-             .row
-                 .col-lg-12.col-md-12.col-xs-12.js-content
-                     .docs-table
-                         .bootstrap-table
-                             .fixed-table-toolbar
-                                 .columns.btn-group.pull-right
-                                     button.btn.btn-default(type='button', name='toggle')
-                                          i.glyphicon.glyphicon.glyphicon-list-alt.icon-list-alt
-                                     .keep-open.btn-group
-                                          button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown')
-                                             i.glyphicon.glyphicon-th.icon-th
-                                             span.caret
-                                          ul.dropdown-menu(role='menu')
-                                             li
-                                                 label
-                                                     input(type='checkbox', value='0', checked='checked')
-                                                     |  Type
-                                             li
-                                                 label
-                                                     input(type='checkbox', value='1', checked='checked')
-                                                     |  Name
-                                             li
-                                                 label
-                                                     input(type='checkbox', value='2', checked='checked')
-                                                     |  Description
-                                             li
-                                                 label
-                                                     input(type='checkbox', value='3', checked='checked')
-                                                     |  Tags
-                                             li
-                                                 label
-                                                     input(type='checkbox', value='4', checked='checked')
-                                                     |  Last Viewed
-                                             li
-                                                 label
-                                                     input(type='checkbox', value='5', checked='checked')
-                                                     |  Expiration
-                                 .pull-right.search
-                                     input.form-control(type='text', placeholder='Search')
-                             .fixed-table-container
-                                 .fixed-table-header
-                                     table
-                                 .fixed-table-body
-                                     .fixed-table-loading(style='top: 37px;') Loading, please wait…
-                                     table.table.table-hover.table-striped(data-toggle='table', data-show-toggle='true', data-show-columns='true', data-search='true', data-striped='true')
-                                         thead
-                                             tr
-                                                 th(style='')
-                                                     .th-inner Type
-                                                     .fht-cell
-                                                 th(style='')
-                                                     .th-inner Name
-                                                     .fht-cell
-                                                 th(style='')
-                                                     .th-inner Description
-                                                     .fht-cell
-                                                 th(style='')
-                                                     .th-inner Tags
-                                                     .fht-cell
-                                                 th(style='')
-                                                     .th-inner Last Viewed
-                                                     .fht-cell
-                                                 th(style='')
-                                                     .th-inner Expiration
-                                                     .fht-cell
-                                         tbody
-                                             tr(data-index='0')
-                                                 td(style='')
-                                                     i.fa.fa-file-excel-o
-                                                 td(style='') Remaining Tasks for this app
-                                                 td(style='') This is a list of all the remaining tasks required to complete this app
-                                                 td(style='') Responsive, RWD, Tech Update, Needs review,
-                                                 td(style='') an hour ago
-                                                 td(style='') Sep 08, 2015
-                                             tr(data-index='1')
-                                                 td(style='')
-                                                     i.fa.fa-file-powerpoint-o
-                                                 td(style='') EVAMs presentation
-                                                 td(style='') This is presentation for the EVAM occuring later this month
-                                                 td(style='') EVAM
-                                                 td(style='') a day ago
-                                                 td(style='') Sep 13, 2015
-                                             tr(data-index='2')
-                                                 td(style='')
-                                                     i.fa.fa-file-word-o
-                                                 td(style='') Xmas Party list
-                                                 td(style='') List of all the people who will be attending the holiday party
-                                                 td(style='') list
-                                                 td(style='') a few mins ago
-                                                 td(style='') Dec 25, 2015
-                                 .fixed-table-pagination
-                         .clearfix
+    a(href='/resource/', style='color:white')
+        span.hi-icon.hi-icon-arrow
+            i.fa.fa-arrow-left.fa-2x
+    a(href='/resource/update/'+ sourceDetails.Id, style='color: white')
+        span.icon_font.spacing.hi-icon.hi-icon-info
+            i.fa.fa-pencil-square-o.fa-2x
+    form.form-sign
+        if(error == 'val')
+            h1.title_orange.alert(role='alert') All Fields required, please try again.
+
+        .text-center.mb-4
+            img.mb-4(src='https://getbootstrap.com/assets/brand/bootstrap-solid.svg', alt='', width='72', height='72')
+            h1.h3.mb-3.font-weight-normal Add Book
+        
+        .form
+            .form-group.row
+                label.col-2.col-form-label(for='title') Title
+                .col-10
+                    p #{sourceDetails.Source}
+            hr(size='10')
+            .form-group.row
+                label.col-2.col-form-label(for='category') Category
+                .col-10
+                     p #{sourceDetails.Category}
+            hr(size='10')
+            .form-group.row
+                label.col-2.col-form-label(for='example-email-input') Email
+                .col-10
+                    p #{sourceDetails.Type}
+
+            hr(size='10')
+            .form-group.row
+                label.col-2.col-form-label(for='rating') Rating
+                .col-10
+                    +outputRating(sourceDetails.Rating)
+            
+            hr(size='10')      
+            .form-group.row
+                label.col-2.col-form-label(for='description') Description
+                .col-10
+                     p #{sourceDetails.Description}
+
